--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="pajamaclaws21">
   <meta name="description" content="pancakes: an Ai Fanfic App by pajamaclaws21" />
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
