--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 
